refactor: introduce SecretRestrictions struct to allow to add more restriction types in the future
